hphp/test/quick/reassign_this2.php.expectf

Fatal error: Cannot re-assign $this in %s on line 6
